--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
   assets:
     - lib/assets/MOBILE-Space.mp4
     - lib/assets/Picsart_23-10-06_22-56-38-205.png
+    - lib/assets/background.mp4
 
   # To add assets to your application, add an assets section, like this:
   # assets:
