--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   video_player: ^2.7.2
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
@@ -60,11 +61,17 @@ flutter:
   uses-material-design: true
   assets:
     - lib/assets/MOBILE-Space.mp4
-    - lib/assets/Picsart_23-10-06_22-56-38-205.png
     - lib/assets/background.mp4
-    - lib/assets/pngwing.com.png
-    - lib/assets/planet-earth-globe-view-from-space-showing-realistic-earth-surface-world-map_31965-12635.jpg
-
+    - lib/assets/mercury.png
+    - lib/assets/earth2.jpg
+    - lib/assets/bookPageBackground.mp4
+    - lib/assets/earth.png
+    - lib/assets/venus.png
+    - lib/assets/mars.png
+    - lib/assets/jupiter.png
+    - lib/assets/saturn.png
+    - lib/assets/uranus.png
+    - lib/assets/neptune.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
