--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   video_player: ^2.7.2
   intl: ^0.18.1
+  loading_animation_widget: ^1.2.0+4
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +73,8 @@ flutter:
     - lib/assets/saturn.png
     - lib/assets/uranus.png
     - lib/assets/neptune.png
+    - lib/assets/moon.png
+    - lib/assets/sun.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
